--- a/yii2/composer.json
+++ b/yii2/composer.json
@@ -18,7 +18,9 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "yiisoft/yii2-bootstrap4": "^2.0"
+        "yiisoft/yii2-bootstrap4": "^2.0",
+        "fxp/composer-asset-plugin": "~1.4",
+        "macgyer/yii2-materializecss": "~3.0.0"
 
     },
     "require-dev": {
