--- a/yii2/composer.json
+++ b/yii2/composer.json
@@ -64,8 +64,8 @@
     },
     "repositories": [
         {
-            "type": "composer",
-            "url": "https://asset-packagist.org"
+            "type": "vcs",
+            "url": "https://github.com/Portunis/yii_2_admin"
         }
     ]
 }
