--- a/yii2/composer.json
+++ b/yii2/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "yiisoft/yii2-app-basic",
-    "description": "Yii 2 Basic Project Template",
-    "keywords": ["yii2", "framework", "basic", "project template"],
+    "name": "portunis/yii_2_admin",
+    "description": "Yii 2 Admin Project Template",
+    "keywords": ["yii2", "framework", "admin", "project template"],
     "homepage": "http://www.yiiframework.com/",
     "type": "project",
     "license": "BSD-3-Clause",
